--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(Tweet_Analysis_pt2)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(Tweet_Analysis_pt2
-        README.md main.cpp)
+        README.md main.cpp util/Word.cpp util/RBTree.h util/bstNode.h porter2_stemmer/porter2_stemmer.cpp util/TweetData.cpp
+        util/Classifier.h)
